[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "formseal-fetch"
version = "0.0.0"
description = "CLI tool for fetching encrypted form submissions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "grayguava"}
]
dependencies = [
    "keyring>=25.0",
    "redis>=5.0",
]

[project.scripts]
fsf = "fsf.fsf:main"


[tool.setuptools]
packages = [
    "fsf",
    "fsf.general",
    "fsf.ui",
    "fsf.commands",
    "fsf.commands.general",
    "fsf.commands.fetch",
    "fsf.commands.connect",
    "fsf.commands.config",
    "fsf.providers",
    "fsf.providers.cloudflare",
    "fsf.providers.cloudflare.storage",
    "fsf.providers.supabase",
    "fsf.providers.redis",
    "fsf.security"
]

[tool.setuptools.package-data]
"fsf" = ["providers/*/config.json"]
