[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "formseal-fetch"
version = "2.9.0"
description = "CLI tool for fetching encrypted form submissions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "grayguava"}
]
dependencies = [
    "keyring>=25.0",
    "redis>=5.0",
    "boto3>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/useFormseal/fetch"
Repository = "https://github.com/useFormseal/fetch.git"

[project.scripts]
fsf = "fsf.cli:main"

[tool.setuptools]
packages = [
    "fsf",
    "fsf.helpers",
    "fsf.ui",
    "fsf.commands",
    "fsf.providers",
    "fsf.providers.cloudflare",
    "fsf.providers.cloudflare.storage",
    "fsf.providers.supabase",
    "fsf.providers.redis",
    "fsf.providers.s3",
    "fsf.security"
]

[tool.setuptools.package-data]
"fsf" = ["providers/*/config.json"]
